--- a/biethday.html
+++ b/biethday.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="first" >
-        <div class=headline>L.N photo<div class="firstphoto"><img src="./picture/download.jpg"></div></div>
+        <div class=headline>L.N photo<div class="firstphoto"><img src="https://i.ibb.co/bKhnRYH/download.jpg" alt="download" border="0" /></div></div>
         <div class="more">   
             <ul>
             <li><a href="#b">home</a></li>
