Update and rename training.html to picture.html

--- a/picture.html
+++ b/picture.html
@@ -20,8 +20,8 @@
         <ul>
         <li><a href="#b">home</a></li>
         <li class=cut><a href="#a">Contact</a></li>
-        <li><a href="https://thomassedhom-design.github.io/Great-photographer/chilrens.photo.html">Child.p</a></li>
-        <li><a href="https://thomassedhom-design.github.io/Great-photographer/biethday.html">Birthday.p</a></li>
+        <li><a href="https://thomassedhom-design.github.io/Great-photographer/childrens.html">Child.p</a></li>
+        <li><a href="https://thomassedhom-design.github.io/Great-photographer/birthday.html">Birthday.p</a></li>
         </ul>
     </div>
     <div class="btn-group">
@@ -32,8 +32,8 @@
         <ul class="dropdown-menu">
             <li><a href="#b">home</a></li>
             <li class=cut><a href="#a">Contact</a></li>
-            <li><a href="https://thomassedhom-design.github.io/Great-photographer/chilrens.photo.html">Child.p</a></li>
-            <li><a href="https://thomassedhom-design.github.io/Great-photographer/biethday.html">Birthday.p</a></li>
+            <li><a href="https://thomassedhom-design.github.io/Great-photographer/childrens.html">Child.p</a></li>
+            <li><a href="https://thomassedhom-design.github.io/Great-photographer/birthday.html">Birthday.p</a></li>
         </ul>
     </div>
     
@@ -43,13 +43,13 @@
 <div class=middle id=b>
     <div class=birthday>
         <div class=comment>children photos </div>
-        <a href ="https://thomassedhom-design.github.io/Great-photographer/chilrens.photo.html">
+        <a href ="https://thomassedhom-design.github.io/Great-photographer/childrens.photo.html">
             <img src="https://i.ibb.co/jbHK7Qc/118736290-166864534999184-5324355166742431653-n.jpg" alt="118736290-166864534999184-5324355166742431653-n" border="0" />
         </a>
     </div>
     <div class=childrens>
         <div class=comment>birthday photos</div>
-        <a href="https://thomassedhom-design.github.io/Great-photographer/biethday.html">
+        <a href="https://thomassedhom-design.github.io/Great-photographer/birthday.html">
         <img src="https://i.ibb.co/x6Rg6TD/Kids-and-Children-Birthday-Party-Photography-Shoot-Sydney.jpg" alt="Kids-and-Children-Birthday-Party-Photography-Shoot-Sydney" border="0" />
         </a>
     </div>
