--- a/picture.html
+++ b/picture.html
@@ -20,7 +20,7 @@
         <ul>
         <li><a href="#b">home</a></li>
         <li class=cut><a href="#a">Contact</a></li>
-        <li><a href="https://thomassedhom-design.github.io/Great-photographer/childrens.html">Child.p</a></li>
+        <li><a href="https://thomassedhom-design.github.io/Great-photographer/children.html">Child.p</a></li>
         <li><a href="https://thomassedhom-design.github.io/Great-photographer/birthday.html">Birthday.p</a></li>
         </ul>
     </div>
@@ -32,7 +32,7 @@
         <ul class="dropdown-menu">
             <li><a href="#b">home</a></li>
             <li class=cut><a href="#a">Contact</a></li>
-            <li><a href="https://thomassedhom-design.github.io/Great-photographer/childrens.html">Child.p</a></li>
+            <li><a href="https://thomassedhom-design.github.io/Great-photographer/children.html">Child.p</a></li>
             <li><a href="https://thomassedhom-design.github.io/Great-photographer/birthday.html">Birthday.p</a></li>
         </ul>
     </div>
@@ -43,7 +43,7 @@
 <div class=middle id=b>
     <div class=birthday>
         <div class=comment>children photos </div>
-        <a href ="https://thomassedhom-design.github.io/Great-photographer/childrens.photo.html">
+        <a href ="https://thomassedhom-design.github.io/Great-photographer/children.html">
             <img src="https://i.ibb.co/jbHK7Qc/118736290-166864534999184-5324355166742431653-n.jpg" alt="118736290-166864534999184-5324355166742431653-n" border="0" />
         </a>
     </div>
