--- a/birthday.html
+++ b/birthday.html
@@ -11,16 +11,16 @@
     <script src="respond.min.js"></script>
     <title>birthday photo</title>
 </head>
-<body>
+<body id=z>
 
     <div class="first" >
         <div class=headline>L.N photo<div class="firstphoto"><img src="https://i.ibb.co/bKhnRYH/download.jpg" alt="download" border="0" /></div></div>
         <div class="more">   
             <ul>
-            <li><a href="#b">home</a></li>
+            <li><a href="https://thomassedhom-design.github.io/Great-photographer/picture.html">home</a></li>
             <li class=cut><a href="#a">Contact</a></li>
-            <li><a href="http://127.0.0.1:5500/Template/art/chilrens.photo.html">Child.p</a></li>
-            <li><a href="http://127.0.0.1:5500/Template/art/biethday.html">Birthday.p</a></li>
+            <li><a href="https://thomassedhom-design.github.io/Great-photographer/children.html">Child.p</a></li>
+            <li><a href="#z">Birthday.p</a></li>
             </ul>
         </div>
         <div class="btn-group">
@@ -29,10 +29,10 @@
             <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a href="#b">home</a></li>
+                <li><a href="https://thomassedhom-design.github.io/Great-photographer/picture.html">home</a></li>
                 <li class=cut><a href="#a">Contact</a></li>
-                <li><a href="http://127.0.0.1:5500/Template/art/chilrens.photo.html">Child.p</a></li>
-                <li><a href="http://127.0.0.1:5500/Template/art/biethday.html">Birthday.p</a></li>
+                <li><a href="https://thomassedhom-design.github.io/Great-photographer/children.html">Child.p</a></li>
+                <li><a href="#z">Birthday.p</a></li>
             </ul>
         </div>
         
