--- a/children.html
+++ b/children.html
@@ -11,15 +11,15 @@
 <script src="respond.min.js"></script>
     <title>childres photo</title>
 </head>
-<body>
+<body class=y>
     <div class="first" >
         <div class=headline>L.N photo<div class="firstphoto"><img src="https://i.ibb.co/bKhnRYH/download.jpg" alt="download" border="0" /></div></div>
         <div class="more">   
             <ul>
-            <li><a href="#b">home</a></li>
+            <li><a href="https://thomassedhom-design.github.io/Great-photographer/picture.html">home</a></li>
             <li class=cut><a href="#a">Contact</a></li>
-            <li><a href="http://127.0.0.1:5500/Template/art/chilrens.photo.html">Child.p</a></li>
-            <li><a href="http://127.0.0.1:5500/Template/art/biethday.html">Birthday.p</a></li>
+            <li><a href="#y">Child.p</a></li>
+            <li><a href="https://thomassedhom-design.github.io/Great-photographer/birthday.html">Birthday.p</a></li>
             </ul>
         </div>
         <div class="btn-group">
@@ -28,10 +28,10 @@
             <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a href="#b">home</a></li>
+                <li><a href="https://thomassedhom-design.github.io/Great-photographer/picture.html">home</a></li>
                 <li class=cut><a href="#a">Contact</a></li>
-                <li><a href="http://127.0.0.1:5500/Template/art/chilrens.photo.html">Child.p</a></li>
-                <li><a href="http://127.0.0.1:5500/Template/art/biethday.html">Birthday.p</a></li>
+                <li><a href="#y">Child.p</a></li>
+                <li><a href="https://thomassedhom-design.github.io/Great-photographer/birthday.html">Birthday.p</a></li>
             </ul>
         </div>
         
