--- a/children.html
+++ b/children.html
@@ -11,7 +11,7 @@
 <script src="respond.min.js"></script>
     <title>childres photo</title>
 </head>
-<body class=y>
+<body id=y>
     <div class="first" >
         <div class=headline>L.N photo<div class="firstphoto"><img src="https://i.ibb.co/bKhnRYH/download.jpg" alt="download" border="0" /></div></div>
         <div class="more">   
