--- a/picture.html
+++ b/picture.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>art</title>
+    <title>lousy's pictures</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"><!--internet explorel-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--phone-->
     <link rel="stylesheet" href="bootstrap.css"> 
